--- a/Kogan_best_dkd.ipynb
+++ b/Kogan_best_dkd.ipynb
@@ -86,80 +86,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "cellId": "3721k2i51sl8mudxwrwzyw",
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "K3joFKw3AuCQ",
-    "outputId": "a89e489a-4ca5-476f-d552-63ee248fc75f"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting wandb\n",
-      "  Downloading wandb-0.12.7-py2.py3-none-any.whl (1.7 MB)\n",
-      "\u001b[K     |████████████████████████████████| 1.7 MB 5.1 MB/s \n",
-      "\u001b[?25hCollecting subprocess32>=3.5.3\n",
-      "  Downloading subprocess32-3.5.4.tar.gz (97 kB)\n",
-      "\u001b[K     |████████████████████████████████| 97 kB 6.2 MB/s \n",
-      "\u001b[?25hRequirement already satisfied: protobuf>=3.12.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (3.17.3)\n",
-      "Requirement already satisfied: Click!=8.0.0,>=7.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (7.1.2)\n",
-      "Collecting yaspin>=1.0.0\n",
-      "  Downloading yaspin-2.1.0-py3-none-any.whl (18 kB)\n",
-      "Requirement already satisfied: requests<3,>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.23.0)\n",
-      "Collecting configparser>=3.8.1\n",
-      "  Downloading configparser-5.1.0-py3-none-any.whl (19 kB)\n",
-      "Requirement already satisfied: psutil>=5.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (5.4.8)\n",
-      "Collecting pathtools\n",
-      "  Downloading pathtools-0.1.2.tar.gz (11 kB)\n",
-      "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.8.2)\n",
-      "Requirement already satisfied: promise<3,>=2.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.3)\n",
-      "Collecting docker-pycreds>=0.4.0\n",
-      "  Downloading docker_pycreds-0.4.0-py2.py3-none-any.whl (9.0 kB)\n",
-      "Requirement already satisfied: six>=1.13.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (1.15.0)\n",
-      "Collecting GitPython>=1.0.0\n",
-      "  Downloading GitPython-3.1.24-py3-none-any.whl (180 kB)\n",
-      "\u001b[K     |████████████████████████████████| 180 kB 44.3 MB/s \n",
-      "\u001b[?25hCollecting sentry-sdk>=1.0.0\n",
-      "  Downloading sentry_sdk-1.5.0-py2.py3-none-any.whl (140 kB)\n",
-      "\u001b[K     |████████████████████████████████| 140 kB 50.9 MB/s \n",
-      "\u001b[?25hRequirement already satisfied: PyYAML in /usr/local/lib/python3.7/dist-packages (from wandb) (3.13)\n",
-      "Collecting shortuuid>=0.5.0\n",
-      "  Downloading shortuuid-1.0.8-py3-none-any.whl (9.5 kB)\n",
-      "Collecting gitdb<5,>=4.0.1\n",
-      "  Downloading gitdb-4.0.9-py3-none-any.whl (63 kB)\n",
-      "\u001b[K     |████████████████████████████████| 63 kB 1.7 MB/s \n",
-      "\u001b[?25hRequirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.7/dist-packages (from GitPython>=1.0.0->wandb) (3.10.0.2)\n",
-      "Collecting smmap<6,>=3.0.1\n",
-      "  Downloading smmap-5.0.0-py3-none-any.whl (24 kB)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (3.0.4)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (1.24.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (2021.10.8)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (2.10)\n",
-      "Requirement already satisfied: termcolor<2.0.0,>=1.1.0 in /usr/local/lib/python3.7/dist-packages (from yaspin>=1.0.0->wandb) (1.1.0)\n",
-      "Building wheels for collected packages: subprocess32, pathtools\n",
-      "  Building wheel for subprocess32 (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-      "  Created wheel for subprocess32: filename=subprocess32-3.5.4-py3-none-any.whl size=6502 sha256=6843a3e4f6e2bd1c8d3d9624e2305cfda47c37ef4854bbaeba719be2131bd815\n",
-      "  Stored in directory: /root/.cache/pip/wheels/50/ca/fa/8fca8d246e64f19488d07567547ddec8eb084e8c0d7a59226a\n",
-      "  Building wheel for pathtools (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-      "  Created wheel for pathtools: filename=pathtools-0.1.2-py3-none-any.whl size=8807 sha256=76e0d53e60273c551efb6c872d31b4a29b899ae881e53b22e452355416a327ee\n",
-      "  Stored in directory: /root/.cache/pip/wheels/3e/31/09/fa59cef12cdcfecc627b3d24273699f390e71828921b2cbba2\n",
-      "Successfully built subprocess32 pathtools\n",
-      "Installing collected packages: smmap, gitdb, yaspin, subprocess32, shortuuid, sentry-sdk, pathtools, GitPython, docker-pycreds, configparser, wandb\n",
-      "Successfully installed GitPython-3.1.24 configparser-5.1.0 docker-pycreds-0.4.0 gitdb-4.0.9 pathtools-0.1.2 sentry-sdk-1.5.0 shortuuid-1.0.8 smmap-5.0.0 subprocess32-3.5.4 wandb-0.12.7 yaspin-2.1.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install wandb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "cellId": "8i2txfsr1p6llk47fb7n5j",
     "id": "bbUpoArCqUYa"
    },
@@ -1676,9 +1602,7 @@
     "def dkd_train(student, teacher, #Две модельки: ученик и учитель\n",
     "              train_loader, val_loader, #Два загрузчика: для трейна и валида\n",
     "              melspec_train, melspec_val, #melspec для трейна и валида\n",
-    "              opt,   config, \n",
-    "              #Эта штука для логгирования в wandb, вроде ее можно создавать и внутри функции, но я хз\n",
-    "              wandb_run=None\n",
+    "              opt,   config\n",
     "             ):\n",
     "    history = []\n",
     "    for n in range(config.num_epochs):\n",
@@ -1687,10 +1611,7 @@
     "\n",
     "        au_fa_fr = dkd_validation(student, teacher, val_loader, melspec_val, config.device, config)\n",
     "        history.append(au_fa_fr)\n",
-    "        if wandb_run is not None:\n",
-    "            #Это из инструкции в wandb\n",
-    "            wandb_run.log({'val_metric':au_fa_fr})\n",
-    "        \n",
+    "        d\n",
     "        if au_fa_fr < VERY_IMPORTANT_CONSTANT:\n",
     "          print('END OF EPOCH', n, '/', config.num_epochs, 'val metric', au_fa_fr)\n",
     "          print('Beat the baseline for student\\nSaving model')\n",
